objects/Opportunity.object
<CustomObject><fields>
        <fullName>Annual_Quantity__c</fullName>
        <label>Annual Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Ball_Park_Gut_feel_Price__c</fullName>
        <label>Ball Park / Gut feel Price?</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Cast_Net_Weight__c</fullName>
        <label>Cast Net Weight</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Allan Beckwith</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Allcast Foundry</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Allen Foundry</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>APCO Engineering</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Austral Alloys</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Bradken Acacia Ridge</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Bradken Ipswich</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Bradken Launceston</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Bradken Runcorn</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Bradken Wodongo</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Bradken Wundowie</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Bundaberg Walkers</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>Callington Cast Iron</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>Cast Bond</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Chassis Brakes</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>CQMS</fullName>
                <color>#EFAE73</color>
            </picklistValues>
            <picklistValues>
                <fullName>Davis and Baird</fullName>
                <color>#57F17C</color>
            </picklistValues>
            <picklistValues>
                <fullName>Derwent Industries</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Dobbie Dico</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Fletcher and Sons</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Fletchers</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Ford Motor Company</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>G &amp; C Foundry</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Grigsby's Foundry</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercast and Forge</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>IXL</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>John Heine</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Keech Castings</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Current_price_if_applicable__c</fullName>
        <label>Current price? (if applicable)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Do_they_have_any_problems_with_the_desig__c</fullName>
        <label>Do they have any problems with the desig</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Drawing_Available__c</fullName>
        <label>Drawing Available</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Exchange_rate_at_quote__c</fullName>
        <label>Exchange rate at quote</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Feight__c</fullName>
        <label>Feight</label>
        <picklist>
            <picklistValues>
                <fullName>FIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>How_Long_in_Busines__c</fullName>
        <label>How Long they Have been in Business</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>If_so_by_whom__c</fullName>
        <label>If so by whom</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Is_it_currently_getting_made__c</fullName>
        <label>Is it currently getting made?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Lost_Reason__c</fullName>
        <description>Reason for the Opportunity lost</description>
        <inlineHelpText>This field is used to explain in more detail why the opportunity was lost if required.</inlineHelpText>
        <label>Loss Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Machine_tooling_available__c</fullName>
        <label>Machine tooling available?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Machining_Required__c</fullName>
        <label>Machining Required?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Metal_Material__c</fullName>
        <label>Metal Material</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Order_Value_Annual_Value__c</fullName>
        <label>Order Value / Annual Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Other_Notes__c</fullName>
        <label>Other/Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Painted__c</fullName>
        <label>Painted</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Patter_Available__c</fullName>
        <label>Patterns Available</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Potential_to_Lead_to_work_more__c</fullName>
        <label>Potential to Lead to work more</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name(drawing Number)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RFQ_Required_By__c</fullName>
        <label>RFQ Required By</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Reason_For_Loss__c</fullName>
        <label>Reason For Loss</label>
        <picklist>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pattern Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casting Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machining Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Current Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Lost Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn't Proceed w/Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Send_quote_direct_to_customer_or_back_to__c</fullName>
        <label>Send quote direct to customer or back to</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Surface_Finish_requirments__c</fullName>
        <label>Surface Finish requirments</label>
        <picklist>
            <picklistValues>
                <fullName>GreenSand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HardSand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Synced_Product_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Synced Product Quote</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Testing_Certification__c</fullName>
        <label>Testing Certification</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Today__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields><fields>
        <fullName>What_level_of_cert__c</fullName>
        <label>What level of cert</label>
        <length>255</length>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><sharingModel>Read</sharingModel><listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews><listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews><listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>Order_Value_Annual_Value__c</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Current_price_if_applicable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Current_price_if_applicable__c</field>
            <operation>equals</operation>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews></CustomObject>